@@ -3,285 +3,285 @@
 	background-image:url('../../images/sprites/t3-icon-actions.png');
 }
 
-.t3-icon-actions.t3-icon-version-document-remove {
+.t3-icon-actions.t3-icon-move-down {
 	background-position: 0 0px;
 }
-.t3-icon-actions.t3-icon-document-paste-into {
+.t3-icon-actions.t3-icon-edit-add {
 	background-position: 0 -24px;
 }
-.t3-icon-actions.t3-icon-system-cache-clear-impact-high {
+.t3-icon-actions.t3-icon-move-to-bottom {
 	background-position: 0 -48px;
 }
-.t3-icon-actions.t3-icon-system-extension-documentation {
+.t3-icon-actions.t3-icon-document-move {
 	background-position: 0 -72px;
 }
-.t3-icon-actions.t3-icon-system-typoscript-documentation {
+.t3-icon-actions.t3-icon-system-list-open {
 	background-position: 0 -96px;
 }
-.t3-icon-actions.t3-icon-system-cache-clear {
+.t3-icon-actions.t3-icon-document-export-t3d {
 	background-position: 0 -120px;
 }
-.t3-icon-actions.t3-icon-edit-add {
+.t3-icon-actions.t3-icon-version-swap-workspace {
 	background-position: 0 -144px;
 }
-.t3-icon-actions.t3-icon-document-import-t3d {
+.t3-icon-actions.t3-icon-move-left {
 	background-position: 0 -168px;
 }
 .t3-icon-actions.t3-icon-view-go-forward {
 	background-position: 0 -192px;
 }
-.t3-icon-actions.t3-icon-page-move {
+.t3-icon-actions.t3-icon-view-paging-next {
 	background-position: 0 -216px;
 }
-.t3-icon-actions.t3-icon-document-close {
+.t3-icon-actions.t3-icon-system-cache-clear-impact-low {
 	background-position: 0 -240px;
 }
-.t3-icon-actions.t3-icon-document-save-view {
+.t3-icon-actions.t3-icon-document-close {
 	background-position: 0 -264px;
 }
-.t3-icon-actions.t3-icon-edit-pick-date {
+.t3-icon-actions.t3-icon-system-shortcut-new {
 	background-position: 0 -288px;
 }
-.t3-icon-actions.t3-icon-system-backend-user-switch {
+.t3-icon-actions.t3-icon-version-page-open {
 	background-position: 0 -312px;
 }
-.t3-icon-actions.t3-icon-document-export-t3d {
+.t3-icon-actions.t3-icon-edit-copy {
 	background-position: 0 -336px;
 }
-.t3-icon-actions.t3-icon-document-export-csv {
+.t3-icon-actions.t3-icon-insert-record {
 	background-position: 0 -360px;
 }
-.t3-icon-actions.t3-icon-document-paste-after {
+.t3-icon-actions.t3-icon-selection-delete {
 	background-position: 0 -384px;
 }
-.t3-icon-actions.t3-icon-move-up {
+.t3-icon-actions.t3-icon-system-extension-uninstall {
 	background-position: 0 -408px;
 }
-.t3-icon-actions.t3-icon-edit-undo {
+.t3-icon-actions.t3-icon-page-open {
 	background-position: 0 -432px;
 }
-.t3-icon-actions.t3-icon-view-paging-next {
+.t3-icon-actions.t3-icon-view-go-back {
 	background-position: 0 -456px;
 }
-.t3-icon-actions.t3-icon-edit-rename {
+.t3-icon-actions.t3-icon-system-tree-search-open {
 	background-position: 0 -480px;
 }
-.t3-icon-actions.t3-icon-view-paging-previous-disabled {
+.t3-icon-actions.t3-icon-document-save-view {
 	background-position: 0 -504px;
 }
-.t3-icon-actions.t3-icon-edit-copy {
+.t3-icon-actions.t3-icon-system-extension-update {
 	background-position: 0 -528px;
 }
-.t3-icon-actions.t3-icon-version-page-open {
+.t3-icon-actions.t3-icon-system-backend-user-emulate {
 	background-position: 0 -552px;
 }
-.t3-icon-actions.t3-icon-edit-unhide {
+.t3-icon-actions.t3-icon-system-cache-clear-impact-high {
 	background-position: 0 -576px;
 }
-.t3-icon-actions.t3-icon-document-save-new {
+.t3-icon-actions.t3-icon-view-paging-first-disabled {
 	background-position: 0 -600px;
 }
-.t3-icon-actions.t3-icon-view-paging-first {
+.t3-icon-actions.t3-icon-document-save-new {
 	background-position: 0 -624px;
 }
-.t3-icon-actions.t3-icon-page-new {
+.t3-icon-actions.t3-icon-edit-unhide {
 	background-position: 0 -648px;
 }
-.t3-icon-actions.t3-icon-window-open {
+.t3-icon-actions.t3-icon-document-new {
 	background-position: 0 -672px;
 }
-.t3-icon-actions.t3-icon-document-info {
+.t3-icon-actions.t3-icon-page-move {
 	background-position: 0 -696px;
 }
-.t3-icon-actions.t3-icon-move-move {
+.t3-icon-actions.t3-icon-document-save-close {
 	background-position: 0 -720px;
 }
-.t3-icon-actions.t3-icon-document-save {
+.t3-icon-actions.t3-icon-document-import-t3d {
 	background-position: 0 -744px;
 }
-.t3-icon-actions.t3-icon-edit-cut {
+.t3-icon-actions.t3-icon-edit-localize-status-high {
 	background-position: 0 -768px;
 }
-.t3-icon-actions.t3-icon-edit-copy-release {
+.t3-icon-actions.t3-icon-move-move {
 	background-position: 0 -792px;
 }
-.t3-icon-actions.t3-icon-view-paging-last {
+.t3-icon-actions.t3-icon-edit-upload {
 	background-position: 0 -816px;
 }
-.t3-icon-actions.t3-icon-system-refresh {
+.t3-icon-actions.t3-icon-document-info {
 	background-position: 0 -840px;
 }
-.t3-icon-actions.t3-icon-system-cache-clear-impact-low {
+.t3-icon-actions.t3-icon-system-cache-clear {
 	background-position: 0 -864px;
 }
-.t3-icon-actions.t3-icon-system-options-view {
+.t3-icon-actions.t3-icon-edit-rename {
 	background-position: 0 -888px;
 }
-.t3-icon-actions.t3-icon-selection-delete {
+.t3-icon-actions.t3-icon-edit-cut {
 	background-position: 0 -912px;
 }
-.t3-icon-actions.t3-icon-document-view {
+.t3-icon-actions.t3-icon-view-paging-previous {
 	background-position: 0 -936px;
 }
-.t3-icon-actions.t3-icon-move-to-top {
+.t3-icon-actions.t3-icon-version-document-remove {
 	background-position: 0 -960px;
 }
-.t3-icon-actions.t3-icon-view-paging-previous {
+.t3-icon-actions.t3-icon-system-help-open {
 	background-position: 0 -984px;
 }
-.t3-icon-actions.t3-icon-move-to-bottom {
+.t3-icon-actions.t3-icon-view-paging-last-disabled {
 	background-position: 0 -1008px;
 }
-.t3-icon-actions.t3-icon-version-swap-workspace {
+.t3-icon-actions.t3-icon-move-up {
 	background-position: 0 -1032px;
 }
-.t3-icon-actions.t3-icon-system-list-open {
+.t3-icon-actions.t3-icon-insert-reference {
 	background-position: 0 -1056px;
 }
-.t3-icon-actions.t3-icon-view-paging-next-disabled {
+.t3-icon-actions.t3-icon-edit-undelete-edit {
 	background-position: 0 -1080px;
 }
-.t3-icon-actions.t3-icon-move-left {
+.t3-icon-actions.t3-icon-document-duplicates-select {
 	background-position: 0 -1104px;
 }
-.t3-icon-actions.t3-icon-view-go-up {
+.t3-icon-actions.t3-icon-system-extension-install {
 	background-position: 0 -1128px;
 }
-.t3-icon-actions.t3-icon-view-list-expand {
+.t3-icon-actions.t3-icon-document-save {
 	background-position: 0 -1152px;
 }
-.t3-icon-actions.t3-icon-insert-reference {
+.t3-icon-actions.t3-icon-edit-restore {
 	background-position: 0 -1176px;
 }
-.t3-icon-actions.t3-icon-system-cache-clear-impact-medium {
+.t3-icon-actions.t3-icon-system-backend-user-switch {
 	background-position: 0 -1200px;
 }
-.t3-icon-actions.t3-icon-system-extension-install {
+.t3-icon-actions.t3-icon-document-paste-after {
 	background-position: 0 -1224px;
 }
-.t3-icon-actions.t3-icon-document-new {
+.t3-icon-actions.t3-icon-system-typoscript-documentation {
 	background-position: 0 -1248px;
 }
-.t3-icon-actions.t3-icon-edit-restore {
+.t3-icon-actions.t3-icon-document-open-read-only {
 	background-position: 0 -1272px;
 }
-.t3-icon-actions.t3-icon-system-extension-import {
+.t3-icon-actions.t3-icon-system-typoscript-documentation-open {
 	background-position: 0 -1296px;
 }
-.t3-icon-actions.t3-icon-edit-upload {
+.t3-icon-actions.t3-icon-edit-pick-date {
 	background-position: 0 -1320px;
 }
-.t3-icon-actions.t3-icon-view-table-expand {
+.t3-icon-actions.t3-icon-view-paging-previous-disabled {
 	background-position: 0 -1344px;
 }
-.t3-icon-actions.t3-icon-document-open {
+.t3-icon-actions.t3-icon-edit-cut-release {
 	background-position: 0 -1368px;
 }
-.t3-icon-actions.t3-icon-document-localize {
+.t3-icon-actions.t3-icon-system-extension-import {
 	background-position: 0 -1392px;
 }
-.t3-icon-actions.t3-icon-system-backend-user-emulate {
+.t3-icon-actions.t3-icon-view-go-down {
 	background-position: 0 -1416px;
 }
-.t3-icon-actions.t3-icon-move-right {
+.t3-icon-actions.t3-icon-document-edit-access {
 	background-position: 0 -1440px;
 }
-.t3-icon-actions.t3-icon-view-go-down {
+.t3-icon-actions.t3-icon-edit-undo {
 	background-position: 0 -1464px;
 }
-.t3-icon-actions.t3-icon-view-list-collapse {
+.t3-icon-actions.t3-icon-document-open {
 	background-position: 0 -1488px;
 }
-.t3-icon-actions.t3-icon-system-tree-search-open {
+.t3-icon-actions.t3-icon-view-list-expand {
 	background-position: 0 -1512px;
 }
-.t3-icon-actions.t3-icon-system-shortcut-new {
+.t3-icon-actions.t3-icon-view-paging-first {
 	background-position: 0 -1536px;
 }
-.t3-icon-actions.t3-icon-document-duplicates-select {
+.t3-icon-actions.t3-icon-document-localize {
 	background-position: 0 -1560px;
 }
-.t3-icon-actions.t3-icon-document-select {
+.t3-icon-actions.t3-icon-view-table-expand {
 	background-position: 0 -1584px;
 }
-.t3-icon-actions.t3-icon-edit-cut-release {
+.t3-icon-actions.t3-icon-system-refresh {
 	background-position: 0 -1608px;
 }
-.t3-icon-actions.t3-icon-edit-hide {
+.t3-icon-actions.t3-icon-system-extension-documentation {
 	background-position: 0 -1632px;
 }
-.t3-icon-actions.t3-icon-view-table-collapse {
+.t3-icon-actions.t3-icon-system-cache-clear-rte {
 	background-position: 0 -1656px;
 }
-.t3-icon-actions.t3-icon-system-cache-clear-rte {
+.t3-icon-actions.t3-icon-page-new {
 	background-position: 0 -1680px;
 }
-.t3-icon-actions.t3-icon-template-new {
+.t3-icon-actions.t3-icon-view-paging-next-disabled {
 	background-position: 0 -1704px;
 }
-.t3-icon-actions.t3-icon-system-extension-download {
+.t3-icon-actions.t3-icon-view-paging-last {
 	background-position: 0 -1728px;
 }
-.t3-icon-actions.t3-icon-system-extension-uninstall {
+.t3-icon-actions.t3-icon-document-paste-into {
 	background-position: 0 -1752px;
 }
-.t3-icon-actions.t3-icon-document-open-read-only {
+.t3-icon-actions.t3-icon-document-history-open {
 	background-position: 0 -1776px;
 }
-.t3-icon-actions.t3-icon-edit-localize-status-low {
+.t3-icon-actions.t3-icon-view-table-collapse {
 	background-position: 0 -1800px;
 }
-.t3-icon-actions.t3-icon-view-paging-first-disabled {
+.t3-icon-actions.t3-icon-document-export-csv {
 	background-position: 0 -1824px;
 }
-.t3-icon-actions.t3-icon-system-typoscript-documentation-open {
+.t3-icon-actions.t3-icon-document-select {
 	background-position: 0 -1848px;
 }
-.t3-icon-actions.t3-icon-system-help-open {
+.t3-icon-actions.t3-icon-version-swap-version {
 	background-position: 0 -1872px;
 }
-.t3-icon-actions.t3-icon-page-open {
+.t3-icon-actions.t3-icon-move-to-top {
 	background-position: 0 -1896px;
 }
-.t3-icon-actions.t3-icon-move-down {
+.t3-icon-actions.t3-icon-view-list-collapse {
 	background-position: 0 -1920px;
 }
-.t3-icon-actions.t3-icon-edit-undelete-edit {
+.t3-icon-actions.t3-icon-edit-copy-release {
 	background-position: 0 -1944px;
 }
-.t3-icon-actions.t3-icon-view-go-back {
+.t3-icon-actions.t3-icon-template-new {
 	background-position: 0 -1968px;
 }
-.t3-icon-actions.t3-icon-document-history-open {
+.t3-icon-actions.t3-icon-system-extension-download {
 	background-position: 0 -1992px;
 }
-.t3-icon-actions.t3-icon-document-save-close {
+.t3-icon-actions.t3-icon-system-cache-clear-impact-medium {
 	background-position: 0 -2016px;
 }
-.t3-icon-actions.t3-icon-system-extension-update {
+.t3-icon-actions.t3-icon-view-go-up {
 	background-position: 0 -2040px;
 }
-.t3-icon-actions.t3-icon-insert-record {
+.t3-icon-actions.t3-icon-edit-hide {
 	background-position: 0 -2064px;
 }
-.t3-icon-actions.t3-icon-version-swap-version {
+.t3-icon-actions.t3-icon-document-view {
 	background-position: 0 -2088px;
 }
-.t3-icon-actions.t3-icon-document-move {
+.t3-icon-actions.t3-icon-edit-localize-status-low {
 	background-position: 0 -2112px;
 }
-.t3-icon-actions.t3-icon-edit-localize-status-high {
+.t3-icon-actions.t3-icon-system-options-view {
 	background-position: 0 -2136px;
 }
-.t3-icon-actions.t3-icon-view-paging-last-disabled {
+.t3-icon-actions.t3-icon-edit-insert-default {
 	background-position: 0 -2160px;
 }
 .t3-icon-actions.t3-icon-edit-delete {
 	background-position: 0 -2184px;
 }
-.t3-icon-actions.t3-icon-document-edit-access {
+.t3-icon-actions.t3-icon-move-right {
 	background-position: 0 -2208px;
 }
-.t3-icon-actions.t3-icon-edit-insert-default {
+.t3-icon-actions.t3-icon-window-open {
 	background-position: 0 -2232px;
 }
